# restaurant-fastapi

./: .env.example.txt  .gitignore  0402_Restaurantsfinal.csv  0408_V6_2_Final_Fixed_Results.csv  README.md  Restaurant_Final.csv  Restaurants.csv  dev.sh  init_vector_db.py  pyproject.toml  restaurant_comments_final.csv  seed_chroma.py  seed_comments.py  seed_comments_TiDB.py  seed_data.py  seed_data_TiDB.py  seed_images.py  seed_images_TiDB.py  setup.bat  setup.py
chroma_db/: chroma.sqlite3
output_json/: restaurants_gallery.json
web_app/: add_price.py  init_data.py  main.py  mysql_connection.py
web_app/dine_vector_db/: chroma.sqlite3
web_app/dine_vector_db/9afec652-c981-4a9e-8beb-7bcee2576ae8/: index_metadata.pickle
web_app/dine_vector_db/a61e2f28-2127-4657-bfce-d2448cfd3047/: index_metadata.pickle
web_app/dine_vector_db/b51d53d1-9235-4099-a25c-4857e3db8fe4/: index_metadata.pickle
web_app/dine_vector_db/fc3bd41c-1b62-444b-85fd-c6bf809fbbeb/: index_metadata.pickle
web_app/models/: feature.py  init_data.py  member.py  schema.py
web_app/output_json/: restaurants_gallery.json  restaurants_main.json
web_app/routes/: account.py  admin.py  auth.py  behavior.py  feature.py  recommend.py  restaurant.py
web_app/services/: ai_service.py  favorite_service.py  restaurant_service.py  semantic_search_service.py  vector_db.py
web_app/static/: detail.html  index.html  style.css
web_app/utils/: email_utils.py  llm_utils.py  security.py
