[project]
name = "restaurant-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.12.0",
    "cryptography>=46.0.3",
    "fastapi[all]>=0.125.0",
    "opencc-python-reimplemented>=0.1.7",
    "pandas>=2.3.3",
    "pymysql>=1.1.2",
    "snownlp>=0.12.3",
    "sqlalchemy>=2.0.45",
]
