[project]
name = "restaurant-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.12.0",
    "chromadb>=1.5.5",
    "cryptography>=46.0.3",
    "fastapi[all]>=0.125.0",
    "huggingface-hub[cli]>=1.9.0",
    "open-clip-torch>=3.3.0",
    "pandas>=2.3.3",
    "pymysql>=1.1.2",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.45",
]
