[project]
name = "restaurant-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.12.0",
    "chromadb>=1.5.5",
    "cryptography>=46.0.3",
    "fastapi[all]>=0.125.0",
    "opencc-python-reimplemented>=0.1.7",
    "huggingface-hub[cli]>=1.9.0",
    "open-clip-torch>=3.3.0",
    "openai>=2.34.0",
    "opencc>=1.3.0",
    "pandas>=2.3.3",
    "pymysql>=1.1.2",
    "snownlp>=0.12.3",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.4.1",
    "sqlalchemy>=2.0.45",
]
